--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prop-types": "^15.8.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "3.3.0",
     "react-toastify": "^8.1.1"
   },
